hello-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-go-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-go
  template:
    metadata:
      labels:
        app: hello-go
        version: v1
    spec:
      containers:
        - name: hello-go
          image: hello-go:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
