multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
  labels:
    app: fastapi-multi
spec:
  containers:
    - name: fastapi-app
      image: fastapi-app:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 8080
      volumeMounts:
        - name: config-volume
          mountPath: /app/config
      resources:
        requests:
          memory: "128Mi"
          cpu: "100m"
        limits:
          memory: "256Mi"
          cpu: "200m"
    - name: sidecar-logger
      image: busybox
      command:
        [
          "sh",
          "-c",
          'while true; do echo "Sidecar is logging at $(date)"; sleep 10; done',
        ]
      resources:
        requests:
          memory: "64Mi"
          cpu: "50m"
        limits:
          memory: "128Mi"
          cpu: "100m"
  volumes:
    - name: config-volume
      configMap:
        name: fastapi-cm
  imagePullSecrets:
    - name: regcred
