hello-go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go-service
spec:
  type: ClusterIP
  selector:
    app: hello-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
